--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="msg-container hide">
-        <p id="msg">Winner</p>
+        <p id="msg">Winner<br></p><br>
         <button id="new-btn">New Game</button>
     </div>
     <main>
-        <h1>Tic Tac Toe</h1>
+        <h1><br>Tic Tac Toe</h1>
         <div class="container">
             <div class="game">
                 <button class="box"></button>
@@ -30,4 +30,5 @@
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
